--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,36 @@ jobs:
         run: |
           # Run the tiny test that validates the pyproject version script.
           PYTHONPATH=. pytest -q tests/test_update_pyproject_version.py
+
+  full-test:
+    name: Full test suite
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
+      - name: Install build & test dependencies
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          # Install the project and its declared dependencies from pyproject.toml
+          pip install -e .
+          pip install pytest
+
+      - name: Run full test suite
+        run: |
+          PYTHONPATH=. pytest -q
