--- a/.github/workflows/pr-update-pyproject-version.yml
+++ b/.github/workflows/pr-update-pyproject-version.yml
@@ -21,6 +21,9 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Install toml dependency
+        run: python -m pip install --upgrade pip && pip install toml
+
       - name: Show PR number
         run: echo "PR number = ${{ github.event.number }}"
 
