chore(release): bump to 0.2.3; add prod packaging and CI docs

--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,4 +1,60 @@
 user  nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
+
+events {
+  worker_connections 1024;
+}
+
+http {
+  include       /etc/nginx/mime.types;
+  default_type  application/octet-stream;
+
+  sendfile        on;
+  tcp_nopush      on;
+  tcp_nodelay     on;
+  keepalive_timeout  65;
+
+  gzip on;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+  server {
+    listen 80 default_server;
+    server_name _;
+    root /usr/share/nginx/html;
+
+    # Deny access to hidden files
+    location ~ /\.(?!well-known).* {
+      deny all;
+    }
+
+    # Serve Data Docs sites located under /usr/share/nginx/html/<site>/
+    # Request URL: /<site>/... will map to filesystem path: /usr/share/nginx/html/<site>/...
+    # If a file is not found, fall back to /usr/share/nginx/html/<site>/index.html
+    location ~ ^/([^/]+)(/.*)?$ {
+      # $1 is the site name, $2 is the remainder (may be empty)
+      set $site $1;
+      set $rest $2;
+      # try the exact file first, then fallback to the site's index.html (SPA friendly)
+      try_files /$site$rest /$site/index.html =404;
+    }
+
+    # Optional: simple root redirect to a default site if desired. Comment out if not wanted.
+    # location = / {
+    #   return 302 /ds_sample_data/;
+    # }
+
+    # Serve top-level assets (if any)
+    location /_static/ {
+      try_files $uri =404;
+    }
+
+    # Basic logging
+    access_log /var/log/nginx/access.log;
+  }
+}
+user  nginx;
 worker_processes  1;
 
 events {
