--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   test:
+    name: Run tests
     runs-on: ubuntu-latest
 
     steps:
@@ -17,35 +18,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
-
-      - name: Install test dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest toml
-
-      - name: Set DQ_DATA_SOURCE for tests
-        # Tests expect DQ_DATA_SOURCE to be set (no implicit defaults)
-        run: echo "DQ_DATA_SOURCE=ds_sample_data" >> $GITHUB_ENV
-
-      - name: Run unit tests (fast)
-        run: |
-          # Run the tiny test that validates the pyproject version script.
-          PYTHONPATH=. pytest -q tests/test_update_pyproject_version.py
-
-  full-test:
-    name: Full test suite
-    runs-on: ubuntu-latest
-    needs: test
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
+          python-version: '3.9'
 
       - name: Cache pip
         uses: actions/cache@v4
@@ -58,17 +31,14 @@ jobs:
       - name: Install build & test dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          # Ensure we can parse pyproject.toml and generate requirements
-          pip install toml
-          # Ensure PyYAML and dev deps are available so the data-source YAML
-          # loader can run during test collection.
+          # Install pinned dev dependencies
           pip install -r requirements-dev.txt
-          # Generate requirements.txt from pyproject.toml so legacy setup.py / installers
-          # that consume requirements.txt remain in sync with pyproject.
-          python .github/scripts/generate_requirements.py
-          # Install the project and its declared dependencies from pyproject.toml
+          # Install the project in editable mode
           pip install -e .
-          pip install pytest
+
+      - name: Set DQ_DATA_SOURCE for tests
+        run: |
+          echo "DQ_DATA_SOURCE=ds_sample_data" >> $GITHUB_ENV
 
       - name: Run full test suite
         env:
