--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+# Generated from pyproject.toml
+# Primary runtime dependencies
+great_expectations[azure]==1.8.1
+azure-storage-file-datalake
+azure-identity
+pandas>=1.3,<2
 great_expectations[azure]
 azure-storage-file-datalake
 azure-identity
