--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dq-docker"
-version = "0.2.4"
+version = "0.2.5"
 description = "DataQuality Docker project using Great Expectations"
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = [ "great_expectations[azure]", "azure-storage-file-datalake", "azure-identity", "pandas",]
+dependencies = [ "great_expectations[azure]==1.8.1", "azure-storage-file-datalake", "azure-identity", "pandas>=1.3,<2",]
+
+[project.optional-dependencies]
+dev = ["pytest>=7.0", "pyyaml>=6.0"]
 [[project.authors]]
 name = "jactools"
 
