--- a/dq_docker/config/data_sources.yml
+++ b/dq_docker/config/data_sources.yml
@@ -1,8 +1,24 @@
 ds_sample_data:
   source_folder: dq_great_expectations/sample_data/customers
-  asset_name: sample_customers
+  asset_name: sample_customers_2019
   batch_definition_name: customers_2019.csv
   batch_definition_path: customers_2019.csv
+  expectation_suite_name: adls_data_quality_suite
+  definition_name: adls_checkpoint
+
+ds_sample_data_2019:
+  source_folder: dq_great_expectations/sample_data/customers
+  asset_name: sample_customers_2019
+  batch_definition_name: customers_2019.csv
+  batch_definition_path: customers_2019.csv
+  expectation_suite_name: adls_data_quality_suite
+  definition_name: adls_checkpoint
+
+ds_sample_data_2020:
+  source_folder: dq_great_expectations/sample_data/customers
+  asset_name: sample_customers_2020
+  batch_definition_name: customers_2020.csv
+  batch_definition_path: customers_2020.csv
   expectation_suite_name: adls_data_quality_suite
   definition_name: adls_checkpoint
 
