--- a/gx/great_expectations.yml
+++ b/gx/great_expectations.yml
@@ -94,6 +94,20 @@ fluent_datasources:
             partitioner:
               regex: customers_2019.csv$
               param_names: []
+          customers_2020.csv:
+            id: e7a2b2f3-1234-4a7b-9f2d-abcdef123456
+            partitioner:
+              regex: customers_2020.csv$
+              param_names: []
+      sample_customers_2019:
+        type: csv
+        id: 15961418-1409-4874-b551-ef5afcbe972c
+        batch_definitions:
+          customers_2019.csv:
+            id: 0b11a400-641f-4bdf-b41a-42a25c7887c0
+            partitioner:
+              regex: customers_2019.csv$
+              param_names: []
     base_directory: /usr/src/app/dq_great_expectations/sample_data/customers
 analytics_enabled:
 data_context_id: 0dabaf07-3397-4169-8517-af9fc23f068c
