--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,8 @@ great_expectations[azure]==1.8.1
 azure-storage-file-datalake
 azure-identity
 pandas>=1.3,<2
-pyyaml
+
+# Optional extras (kept in separate files):
+# Optional extras (kept in separate files):
+#  - requirements-adls.txt  (ADLS runtime support: adlfs)
+#  - requirements-delta.txt (Delta Lake reader: deltalake, pyarrow)
