--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dq-docker"
-version = "0.2.16"
+version = "0.2.17"
 description = "DataQuality Docker project using Great Expectations"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -16,6 +16,26 @@ name = "jactools"
 dev = [ "pytest>=7.0", "pyyaml>=6.0",]
 adls = [ "adlfs>=0.8.2" ]
 delta = [ "deltalake>=0.15.0" ]
+datasources = [ "adlfs>=0.8.2", "deltalake>=0.15.0", "pyarrow>=5.0.0" ]
+s3 = [ "s3fs>=2023.11.0" ]
+gcs = [ "gcsfs>=2023.11.0" ]
+bigquery = [ "google-cloud-bigquery>=3.0.0" ]
+snowflake = [ "snowflake-connector-python>=3.0.0" ]
+postgres = [ "psycopg2-binary>=2.9", "sqlalchemy>=1.4" ]
+
+dbt = [ "dbt-core>=1.6.0" ]
+
+dbt_databricks = [ "dbt-databricks>=1.6.0" ]
+dbt_postgres = [ "dbt-postgres>=1.6.0" ]
+dbt_fabric = [ "dbt-fabric>=1.6.0" ]
+dbt_fabricspark = [ "dbt-fabricspark>=1.6.0" ]
+dbt_redshift = [ "dbt-redshift>=1.6.0" ]
+dbt_sql_adapters = [ "dbt-postgres>=1.6.0", "dbt-redshift>=1.6.0" ]
+dbt_fabric_adapters = [ "dbt-fabric>=1.6.0", "dbt-fabricspark>=1.6.0" ]
+dbt_cloud_adapters = [ "dbt-databricks>=1.6.0" ]
+dbt_all_adapters = [ "dbt-databricks>=1.6.0", "dbt-postgres>=1.6.0", "dbt-fabric>=1.6.0", "dbt-fabricspark>=1.6.0", "dbt-redshift>=1.6.0" ]
+
+all = [ "adlfs>=0.8.2", "deltalake>=0.15.0", "pyarrow>=5.0.0", "s3fs>=2023.11.0", "gcsfs>=2023.11.0", "google-cloud-bigquery>=3.0.0", "snowflake-connector-python>=3.0.0", "psycopg2-binary>=2.9", "sqlalchemy>=1.4", "dbt-core>=1.6.0", "dbt-databricks>=1.6.0", "dbt-postgres>=1.6.0", "dbt-fabric>=1.6.0", "dbt-fabricspark>=1.6.0", "dbt-redshift>=1.6.0" ]
 
 [project.license]
 text = "CC0-1.0"
