Revert Azurite support: remove compose, seed script, docs; strip --azurite from helper; update README

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
 # Example environment file for local development. Copy to `.env` and
-# fill in values (the repository's `.env` is gitignored).
+# fill in values. The repository's `.env` is gitignored — do NOT commit
+# secrets. Use `.env.example` as a template only.
 
-# Azure Service Principal credentials (used by the runtime to authenticate)
+# Option A: Use Azure Key Vault to supply credentials to the helper
+# Set this to your Key Vault URL (e.g. https://my-vault.vault.azure.net/)
+KEY_VAULT_URL=
+
+# Option B: Direct service principal credentials (used for local testing)
 AZURE_TENANT_ID="<Your-Azure-Tenant-ID>"
 AZURE_CLIENT_ID="<Your-Azure-Client-ID>"
 AZURE_CLIENT_SECRET="<Your-Azure-Client-Secret>"
 
 # Storage account and container
+# `AZURE_STORAGE_ACCOUNT_NAME` is used by modern helpers; `ADLS_ACCOUNT_NAME`
+# is kept for compatibility with older scripts.
+AZURE_STORAGE_ACCOUNT_NAME="<Your-Storage-Account-Name>"
 ADLS_ACCOUNT_NAME="<Your-Storage-Account-Name>"
 ADLS_CONTAINER_NAME="<Your-Container-Name>"
 
