--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ great_expectations[azure]==1.9.1
 azure-storage-file-datalake
 azure-identity
 pandas>=2.2.3,<3
+pyyaml>=6.0
 
 # Optional extras (kept in separate files):
 # Optional extras (kept in separate files):
