--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 great_expectations[azure]==1.9.1
-azure-storage-file-datalake
-azure-identity
-pandas>=2.2.3,<3
+azure-storage-file-datalake==12.22.0
+azure-identity==1.25.1
+pandas==2.3.3
+PyYAML==6.0.3
