--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,4 @@
 pytest>=7.0
 pyyaml>=6.0
 
-# Development extras for ADLS/local testing
-fsspec==2025.10.0
-adlfs==2025.8.0
+# Dev extras mirror [project.optional-dependencies].dev from pyproject.toml
