--- a/.github/workflows/pr-update-pyproject-version.yml
+++ b/.github/workflows/pr-update-pyproject-version.yml
@@ -33,10 +33,29 @@ jobs:
         run: |
           python .github/scripts/update_pyproject_version.py $PR_NUMBER pyproject.toml
 
-      - name: Commit and push changes
+      - name: Commit and push changes (safe)
         run: |
+          set -euo pipefail
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add pyproject.toml
           git commit -m "chore(release): set pyproject version to patch=${{ github.event.number }}" || echo "No changes to commit"
-          git push origin HEAD:${{ github.head_ref }}
+
+          # Ensure we have the latest remote branch state to avoid push conflicts.
+          # Fetch the target branch and attempt to rebase local changes on top of it.
+          TARGET=${{ github.head_ref }}
+          git fetch origin "$TARGET" || true
+          if git rev-parse --verify "origin/$TARGET" >/dev/null 2>&1; then
+            # Try to rebase onto remote branch; if rebase fails, abort and continue.
+            git rebase --abort 2>/dev/null || true
+            if ! git rebase "origin/$TARGET"; then
+              echo "Rebase failed; aborting rebase and continuing to push with force-with-lease"
+              git rebase --abort 2>/dev/null || true
+            fi
+          fi
+
+          # Push. If the push is rejected due to remote changes, use --force-with-lease
+          if ! git push origin HEAD:"$TARGET"; then
+            echo "Push rejected; attempting force-with-lease to update remote branch"
+            git push --force-with-lease origin HEAD:"$TARGET"
+          fi
