chore: remove JSON ODCS contract (customers.contract.json); use YAML contract instead

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.2.10"
 description = "DataQuality Docker project using Great Expectations"
 readme = "README.md"
 requires-python = ">=3.8"
-dependencies = [ "great_expectations[azure]==1.9.1", "azure-storage-file-datalake", "azure-identity", "pandas>=2.2.3,<3",]
+dependencies = [ "great_expectations[azure]==1.9.1", "azure-storage-file-datalake", "azure-identity", "pandas>=2.2.3,<3", "PyYAML>=6.0",]
 [[project.authors]]
 name = "jactools"
 
